Added profiles to switch between thin, fat and native build